# ctiforge

./: .gitignore  DECISIONS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/sample-output/: iocs.csv  report.json  report.md
src/ctiforge/: __init__.py  analyze.py  api.py  attack.py  cli.py  config.py  extract.py  ingest.py  mcp_server.py  models.py  pipeline.py  render.py  sigma.py  tlds.py
src/ctiforge/web/: index.html  sample_analysis.json
tests/: conftest.py  test_api.py  test_attack.py  test_extract.py  test_mcp.py  test_pipeline.py  test_render.py
tests/fixtures/: sample_advisory.txt
