[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctiforge"
version = "0.1.0"
description = "Turn threat reports into structured, validated, machine-usable intelligence — with hallucination guards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ctiforge contributors" }]
keywords = ["threat-intelligence", "cti", "mitre-attack", "ioc", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "pymupdf>=1.24",
    "iocextract>=1.16",
    "pydantic>=2.6",
    "anthropic>=0.39",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/cyberyakker-star/ctiforge"
Repository = "https://github.com/cyberyakker-star/ctiforge"

[project.scripts]
ctiforge = "ctiforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ctiforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
