[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctiforge"
version = "0.1.0"
description = "Turn threat reports into structured, validated, machine-usable intelligence — with hallucination guards."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ctiforge contributors" }]
keywords = ["threat-intelligence", "cti", "mitre-attack", "ioc", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "trafilatura>=1.8",
    "pymupdf>=1.24",
    "iocextract>=1.16",
    "requests>=2.31",  # required at import time by iocextract, which under-declares it
    "pydantic>=2.6",
    "anthropic>=0.39",
]

[project.optional-dependencies]
# AI-agent interface (MCP tool server).
mcp = ["mcp>=1.2"]
# Human interface: REST API + local web UI.
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
# Everything.
all = ["ctiforge[mcp,server]"]
dev = ["pytest>=8.0", "ruff>=0.6", "ctiforge[all]"]

[project.urls]
Homepage = "https://github.com/cyberyakker-star/ctiforge"
Repository = "https://github.com/cyberyakker-star/ctiforge"

[project.scripts]
ctiforge = "ctiforge.cli:app"
ctiforge-mcp = "ctiforge.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctiforge"]
# Ship the web UI page as package data.
include = ["src/ctiforge/web/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
# B008: typer uses function calls (Option/Argument) in argument defaults by design.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
